--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,15 @@
   <title>Weatherman 1.0.0</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=5A6GMWAO2o">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=5A6GMWAO2o">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=5A6GMWAO2o">
+  <link rel="manifest" href="/site.webmanifest?v=5A6GMWAO2o">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=5A6GMWAO2o" color="#5bbad5">
+  <link rel="shortcut icon" href="/favicon.ico?v=5A6GMWAO2o">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
