--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=5A6GMWAO2o">
+  <!-- <link rel="manifest" href="/site.webmanifest?v=5A6GMWAO2o"> -->
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=5A6GMWAO2o">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=5A6GMWAO2o">
-  <link rel="manifest" href="/site.webmanifest?v=5A6GMWAO2o">
   <link rel="mask-icon" href="/safari-pinned-tab.svg?v=5A6GMWAO2o" color="#5bbad5">
   <link rel="shortcut icon" href="/favicon.ico?v=5A6GMWAO2o">
   <link rel="preconnect" href="https://fonts.gstatic.com">
